Started styling merch page also fixed spacing on strong tags

--- a/Html/Styles.css
+++ b/Html/Styles.css
@@ -191,7 +191,7 @@ body {
 }
 
 .listen-btn:hover {
-	background: rgb(117, 29, 29);
+	background: rgb(149, 40, 40);
 	color: white;
 	border: 1px solid rgb(26, 6, 6);
 }
@@ -199,10 +199,12 @@ body {
 	text-decoration: none;
 }
 /* Seasons grid on seasons page*/
-/*.season-s {
+
+.merch-item {
 	margin: 30px;
 }
-.season-title {
+
+.merch-item-title {
 	display: block;
 	width: 100%;
 	text-align: center;
@@ -212,22 +214,61 @@ body {
 	margin-bottom: 15px;
 }
 
-.season-image {
-	height: 220px;
+.merch-item-img {
+	height: 250px;
 }
 
-.season-deatails {
+.merch-item-deatails {
 	display: flex;
 	align-items: center;
 	padding: 5px;
 }
-.season-btn-listen {
-	display: flex;
-	align-items: center;
-	padding: 5px;
-	text-decoration: none;
+
+.merch-item-price {
+	flex-grow: 1;
+	color: #333;
 }
 
-.season-item {
-	margin: 30px;
-}*/
+.merch-items {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+.merch-img {
+	width: 300px;
+	height: 157px;
+}
+
+.cart-header {
+	font-weight: bold;
+	font-size: 1.25em;
+	color: #333;
+}
+
+.cart-column {
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid black;
+	margin-right: 1.5em;
+	padding-bottom: 10px;
+	margin-top: 10px;
+}
+
+.cart-row {
+	display: flex;
+}
+
+.cart-item {
+	width: 45%;
+}
+
+.cart-price {
+	width: 20%;
+	font-size: 1.2em;
+	color: #333;
+}
+
+.cart-quantity {
+	width: 35%;
+}
